--- a/pom.xml
+++ b/pom.xml
@@ -15,4 +15,14 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-</project>
+  
+  <distributionManagement>
+  <repository>
+    <id>my-nexus-repo</id>
+    <url>http://localhost:8081/repository/maven-releases/</url>
+  </repository>
+  <snapshotRepository>
+    <id>my-nexus-snapshots</id>
+    <url>http://localhost:8081/repository/maven-snapshots/</url>
+  </snapshotRepository>
+</distributionManagement>
