--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,11 @@
   
   <distributionManagement>
   <repository>
-    <id>my-nexus-repo</id>
+    <id>maven-releases</id>
     <url>http://localhost:8081/repository/maven-releases/</url>
   </repository>
   <snapshotRepository>
-    <id>my-nexus-snapshots</id>
+    <id>maven-snapshots</id>
     <url>http://localhost:8081/repository/maven-snapshots/</url>
   </snapshotRepository>
 </distributionManagement>
